@@ -195,6 +195,8 @@
                             </control>
                         </control>
                     </control>
+
+                    <include>OSD_Clock</include>
                 </control>
             </control>
         </definition>
@@ -692,7 +694,7 @@
                     </control>
                 </control>
             </control>
-
+            <include>OSD_Clock</include>
             <include>OSD_Progress_Text</include>
             <include>OSD_Progress_Bar</include>
         </control>
@@ -706,7 +708,7 @@
         <height>100%</height>
     </include>
 
-    <include name="OSD_Progress_Text">
+    <include name="OSD_Clock">
         <!-- Clock -->
         <control type="group">
             <top>30</top>
@@ -743,17 +745,28 @@
                     <font>font_tiny</font>
                     <textcolor>$VAR[ColorHighlight]</textcolor>
                     <label>  |  </label>
-                    <visible>!String.IsEmpty(Player.FinishTime) | !String.IsEmpty(VideoPlayer.EndTime)</visible>
+                    <visible>[!Window.IsVisible(MusicVisualisation.xml) + [!String.IsEmpty(Player.FinishTime) | !String.IsEmpty(VideoPlayer.EndTime)]] | [Window.IsVisible(MusicVisualisation.xml)]</visible>
                 </control>
                 <control type="label">
                     <width>auto</width>
                     <font>font_tiny</font>
                     <textcolor>panel_fg_100</textcolor>
                     <label>$VAR[Label_OSD_FinishTime,$LOCALIZE[31207] ,]</label>
-                    <visible>!String.IsEmpty(Player.FinishTime) | !String.IsEmpty(VideoPlayer.EndTime)</visible>
+                    <visible>!Window.IsVisible(MusicVisualisation.xml) + [!String.IsEmpty(Player.FinishTime) | !String.IsEmpty(VideoPlayer.EndTime)]</visible>
+                </control>
+                <control type="label">
+                    <width>auto</width>
+                    <font>font_tiny</font>
+                    <textcolor>panel_fg_100</textcolor>
+                    <label>Track $INFO[Playlist.Position] of $INFO[Playlist.Length]</label>
+                    <visible>Window.IsVisible(MusicVisualisation.xml)</visible>
                 </control>
             </control>
         </control>
+    </include>
+
+    <include name="OSD_Progress_Text">
+        
 
         <!-- Progress Text -->
         <control type="group">
