@@ -1,5 +1,6 @@
 0.9.52
 - Fix for busy spinner on home screen
+- Clock to music vis
 
 0.9.51
 - Add fanart gallery fullscreen viewer
